# https://black.readthedocs.io/
[tool.black]
line-length = 88
target_version = ['py36']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
  | migrations
)/
'''

[tool.poetry]
name = "ethical-ad-server-2"
version = "0.1.0"
description = ""
authors = ["ramarcon <<>>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
